@@ -4,6 +4,7 @@ to Subversion revision numbers (rXXXXX).
 
 WinMerge 2.7.7.5
   Cleaning up Help-menu (#1875111)
+  BugFix: Potential lockup in folder compare (#1865131, #1889907)
 
 WinMerge 2.7.7.4 - 2008-02-07 (r5011)
   Detect (and read/write) UTF-8 files without BOM (#1879271)
